// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for state: error, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #290A0A !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: error, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #FCE8E9 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #003320 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #EBFAF0 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: warning, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #2B2208 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: warning, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #FFF9E6 !important;
  border-radius: 4px !important;
}
:host([hidden]) {
  display: none !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;
